[gd_scene load_steps=6 format=3 uid="uid://xk51hvai1u30"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_qjaec"]
[ext_resource type="Theme" uid="uid://dyoqwqakkfsn2" path="res://scenes/style_menu.tres" id="2_2d35r"]
[ext_resource type="FontFile" uid="uid://ch2qmpdjqls18" path="res://assets/fonts/Xolonium-Regular-dc1d20fa.ttf" id="3_r5jrr"]
[ext_resource type="AudioStream" uid="uid://cmc1m6r0ti3ls" path="res://assets/audio/Select 1.wav" id="4_0mx0o"]

[sub_resource type="Theme" id="Theme_trl2h"]

[node name="Finished_Menu" type="Node"]
process_mode = 3
script = ExtResource("1_qjaec")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 16.0
offset_bottom = 113.0
grow_horizontal = 2
theme = SubResource("Theme_trl2h")
theme_override_font_sizes/font_size = 34
text = "You made it to the end !
See your highscore:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -68.0
offset_right = 50.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(300, 24)
layout_mode = 2
text = "no highscore"

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(300, 24)
layout_mode = 2
text = "no highscore"

[node name="RichTextLabel3" type="RichTextLabel" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(300, 24)
layout_mode = 2
text = "no highscore"

[node name="RichTextLabel4" type="RichTextLabel" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(300, 24)
layout_mode = 2
text = "no highscore"

[node name="RichTextLabel5" type="RichTextLabel" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(300, 24)
layout_mode = 2
text = "no highscore"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -248.0
offset_top = -33.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_2d35r")

[node name="MenuContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="btMain" type="Button" parent="CanvasLayer/MarginContainer/MenuContainer"]
layout_mode = 2
theme = ExtResource("2_2d35r")
theme_override_fonts/font = ExtResource("3_r5jrr")
theme_override_font_sizes/font_size = 20
text = "Main Menu"

[node name="btQuit" type="Button" parent="CanvasLayer/MarginContainer/MenuContainer"]
layout_mode = 2
theme = ExtResource("2_2d35r")
theme_override_font_sizes/font_size = 20
text = "Quit Game"

[node name="SoundSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_0mx0o")

[connection signal="focus_entered" from="CanvasLayer/MarginContainer/MenuContainer/btMain" to="." method="_on_bt_focus_entered"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/MenuContainer/btMain" to="." method="_on_bt_main_pressed"]
[connection signal="focus_entered" from="CanvasLayer/MarginContainer/MenuContainer/btQuit" to="." method="_on_bt_focus_entered"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/MenuContainer/btQuit" to="." method="_on_bt_quit_pressed"]
